chore(progress-indicator): fix indicator alignment

--- a/src/components/progress-indicator/_progress-indicator.scss
+++ b/src/components/progress-indicator/_progress-indicator.scss
@@ -38,6 +38,7 @@
 
   .#{$prefix}--progress-line {
     position: absolute;
+    left: 0;
     height: 1px;
     width: rem(128px);
     border: $progress-indicator-bar-width;
@@ -128,6 +129,7 @@
   //OPTIONAL HELPER TEXT STYLING
   .#{$prefix}--progress-optional {
     position: absolute;
+    left: 0;
     margin-left: $carbon--spacing-06;
     margin-top: rem(28px);
     @include type-style('label-01');
